# serializer version: 1
# name: test_poe_switches
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 1 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_1_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_1_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 1 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000001_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.10
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 6 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_6_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.11
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_6_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 6 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000006_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.12
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 7 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_7_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.13
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_7_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 7 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000007_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.14
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 8 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_8_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.15
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_8_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 8 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000008_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 2 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_2_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.3
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_2_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 2 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000002_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.4
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 3 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_3_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.5
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_3_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 3 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000003_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.6
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 4 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_4_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.7
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_4_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 4 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000004_poe',
    'unit_of_measurement': None,
  })
# ---
# name: test_poe_switches.8
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test PoE Switch Port 5 PoE',
      'icon': 'mdi:ethernet',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_poe_switch_port_5_poe',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_poe_switches.9
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_poe_switch_port_5_poe',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ethernet',
    'original_name': 'Port 5 PoE',
    'platform': 'tplink_omada',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '54-AF-97-00-00-01_000000000000000000000005_poe',
    'unit_of_measurement': None,
  })
# ---
